Melhoria na estrutura das imagens