@@ -2,20 +2,22 @@ package com.selecaodeachados.bd_selecao_de_achados.service;
 
 import com.selecaodeachados.bd_selecao_de_achados.repository.ProdutoRepository;
 import lombok.RequiredArgsConstructor;
+import lombok.extern.slf4j.Slf4j;
 import net.coobird.thumbnailator.Thumbnails;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.http.*;
 import org.springframework.stereotype.Service;
 import org.springframework.web.client.RestTemplate;
 
+import java.io.ByteArrayInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.InputStream;
 import java.net.URL;
 import java.util.ArrayList;
 import java.util.List;
 import java.util.Map;
-import java.util.stream.Collectors;
 
+@Slf4j
 @Service
 @RequiredArgsConstructor
 public class ImageMigrationService {
@@ -30,12 +32,14 @@ public class ImageMigrationService {
     private String serviceRoleKey;
 
     public List<Map<String, Object>> migrarTodasImagens() {
-        List<String> urls = produtoRepository.findAllByOrderByOrdemAsc(null)
+        List<String> urls = produtoRepository.findAll()
                 .stream()
                 .map(p -> p.getImagem())
                 .filter(url -> url != null && url.startsWith(supabaseUrl))
                 .distinct()
-                .collect(Collectors.toList());
+                .toList();
+
+        log.info("Migrando {} imagens...", urls.size());
 
         List<Map<String, Object>> resultados = new ArrayList<>();
 
@@ -44,14 +48,13 @@ public class ImageMigrationService {
                 String nomeArquivo = publicUrl.substring(publicUrl.lastIndexOf("/") + 1);
                 String storageUrl = supabaseUrl + "/storage/v1/object/produtos/" + nomeArquivo;
 
-                URL url = new URL(publicUrl);
                 byte[] originalBytes;
-                try (InputStream in = url.openStream()) {
+                try (InputStream in = new URL(publicUrl).openStream()) {
                     originalBytes = in.readAllBytes();
                 }
 
                 ByteArrayOutputStream baos = new ByteArrayOutputStream();
-                Thumbnails.of(new java.io.ByteArrayInputStream(originalBytes))
+                Thumbnails.of(new ByteArrayInputStream(originalBytes))
                         .size(1200, 1200)
                         .outputQuality(0.80)
                         .toOutputStream(baos);
@@ -60,24 +63,22 @@ public class ImageMigrationService {
                 String ext = nomeArquivo.contains(".")
                         ? nomeArquivo.substring(nomeArquivo.lastIndexOf("."))
                         : ".jpg";
-                String contentType;
-                if (ext.equalsIgnoreCase(".png")) {
-                    contentType = "image/png";
-                } else if (ext.equalsIgnoreCase(".webp")) {
-                    contentType = "image/webp";
-                } else {
-                    contentType = "image/jpeg";
-                }
+                String contentType = switch (ext.toLowerCase()) {
+                    case ".png" -> "image/png";
+                    case ".webp" -> "image/webp";
+                    default -> "image/jpeg";
+                };
 
                 HttpHeaders headers = new HttpHeaders();
                 headers.set("Authorization", "Bearer " + serviceRoleKey);
                 headers.setContentType(MediaType.parseMediaType(contentType));
-                headers.setCacheControl(CacheControl.maxAge(31536000, java.util.concurrent.TimeUnit.SECONDS).cachePublic());
 
                 HttpEntity<byte[]> entity = new HttpEntity<>(compressed, headers);
                 restTemplate.exchange(storageUrl, HttpMethod.POST, entity, String.class);
 
                 long reducao = ((originalBytes.length - compressed.length) * 100) / originalBytes.length;
+                log.info("OK: {} ({} → {}, {}%)", nomeArquivo, originalBytes.length, compressed.length, reducao);
+
                 resultados.add(Map.of(
                         "url", publicUrl,
                         "status", "ok",
@@ -86,6 +87,7 @@ public class ImageMigrationService {
                         "reducao", reducao + "%"
                 ));
             } catch (Exception e) {
+                log.error("Erro ao processar {}: {}", publicUrl, e.getMessage());
                 resultados.add(Map.of(
                         "url", publicUrl,
                         "status", "erro",
